--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/Castercodex/exotiq-school-proj/issues"
   },
-  "homepage": "https://github.com/Castercodex/exotiq-school-proj#readme"
+  "homepage": "https://github.com/Castercodex/exotiq-school-proj#readme",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
+  }
 }
